[package]
name = "wotw-seedgen-wasm-ui"
description = "seedgen binds and helper functions for the launcher and website"
version = "0.5.3"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
wotw_seedgen = "0.3"
getrandom = { version = "0.2", features = ["js"] }
wasm_bindgen_helper_macros = "0.0.4"
console_error_panic_hook = "0.1"
regex = "1.7"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
debug = true

[[bin]]
name = "write-pkg"
